add new localstorage files

--- a/src/app/core/header/header.html
+++ b/src/app/core/header/header.html
@@ -29,6 +29,12 @@
                 <li class="active">
                     <a ui-sref="dashboard">Slot</a>
                 </li>
+                <li class="">
+                    <a ui-sref="localstorage">LocalStorage</a>
+                </li>
+                <li class="">
+                    <a ng-click="headerCtrl.drop()">Drop Datbase and LocalStorage</a>
+                </li>
             </ul>
         </div>
         <!-- END MEGA MENU -->
